# email_generation_assistant

./: .env.example  .gitignore  README.md  TASK_EXECUTION_PLAN.md  pyproject.toml  requirements.txt
docs/: TASK_EXECUTION_PLAN.md  project_requirement_analysis.md
src/: config.py  main.py
src/api/: dependencies.py  exception_handlers.py  middleware.py  models.py  routes.py  services.py
src/api/middleware/: __init__.py  cors.py  logging.py  request_id.py
src/api/models/: __init__.py  common.py  enums.py  requests.py  responses.py
src/api/routes/: __init__.py  comparison.py  evaluation.py  generation.py  health.py
src/api/services/: __init__.py  comparison.py  evaluation.py  generation.py  health.py
src/core/: email_generator.py  exceptions.py  graph.py  interfaces.py  rate_limiter.py  state.py
src/utils/: logging_config.py  validators.py
